Numeric issues, Collection.addAll, initCause, manual array copies, boxing